--- a/website.html
+++ b/website.html
@@ -75,15 +75,19 @@
   </video>
 
   <!-- The header content -->
-  <div class="container h-100">
-    <div class="d-flex h-100 text-center align-items-center">
-      <div class="w-100 text-white">
-        <h1 class="display-3">Video Header</h1>
-        <p class="lead mb-0">Using HTML5 Video and Bootstrap</p>
-      </div>
-    </div>
-  </div>
-</header>
+  <div class="video_container">
+	   <video class="openingsvideo" src="images/HeaderVideo.mp4" autoplay loop muted>
+	  <video/>
+	  
+	  <div class="video_overlay">
+		  <div class="title_1">VIRTYOU</div>
+		  <div class="title_2">to be you</div>
+		   <div class="button">
+		  <a href="#">
+			  <button class="read_more_button" type="button">Read More</button>
+			   </a>
+		  </div>
+		   </div>
     <!-- End of hero section -->
 
     <!-- Start of carrousel, adapted from https://getbootstrap.com/docs/5.1/components/carousel/ -->
