--- a/website.html
+++ b/website.html
@@ -235,12 +235,12 @@
             </a>
           </li>
           <li>	
-            <a href="https://twitter.com/bredauas" target="_blank">
+            <a href="https://www.tiktok.com/@virtyou_" target="_blank">
               <img class="m-2" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/bredauniversityas/" target="_blank">
+            <a href="https://www.instagram.com/virtyou_/">
               <img class="m-2" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
           </li>
