--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="catalog.html">Catalog&nbsp;</a>
+              <a class="nav-link" href="#">Catalog&nbsp;</a>
             </li>
 			  <li class="nav-item">
               <a class="nav-link" href="#">About VirtYou&nbsp;</a>
@@ -61,6 +61,10 @@
       </div>
     </nav>
     <!-- End of navigation bar -->
+
+
+    <!-- Start of section adapted from https://getbootstrap.com/docs/5.1/examples/album/ -->
+   <header>
 
   <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
   <div class="overlay"></div>
