--- a/account.html
+++ b/account.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Catalog&nbsp;</a>
+              <a class="nav-link" href="catalog.html">Catalog&nbsp;</a>
             </li>
 			  <li class="nav-item">
               <a class="nav-link" href="#">About VirtYou&nbsp;</a>
@@ -61,10 +61,6 @@
       </div>
     </nav>
     <!-- End of navigation bar -->
-
-
-    <!-- Start of section adapted from https://getbootstrap.com/docs/5.1/examples/album/ -->
-   <header>
 
   <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
   <div class="overlay"></div>
@@ -137,12 +133,11 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Fuck You -&nbsp; &nbsp;Sweater</h5>
-              <p class="card-text">&nbsp;Available in: Black, White, Red</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+              <h5 class="card-title">Card #1</h5>
+              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+              <a href="#" class="btn btn-primary">Learn more</a>
             </div>
           </div>
         </div>
@@ -152,12 +147,11 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">&nbsp; Fuck You With Logo - Sweater</h5>
-              <p class="card-text"> Available in: Black, White, Red&nbsp;</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+              <h5 class="card-title">Card #2</h5>
+              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+              <a href="#" class="btn btn-primary">Learn more</a>
             </div>
           </div>
         </div>
@@ -167,12 +161,11 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">&nbsp;</h5>
-              <p class="card-text">Available in: Black, White, Red</p>
-              <p class="card-text">Available in : XS, S, M, L, XL, XXL&nbsp;</p>
+              <h5 class="card-title">Card #3</h5>
+              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+              <a href="#" class="btn btn-primary">Learn more</a>
             </div>
           </div>
         </div>
@@ -183,11 +176,10 @@
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
               <h5 class="card-title">Card #4</h5>
-              <p class="card-text"> Available in: Black, White, Red</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+              <a href="#" class="btn btn-primary">Learn more</a>
             </div>
           </div>
         </div>
@@ -198,11 +190,10 @@
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
               <h5 class="card-title">Card #5</h5>
-              <p class="card-text"> Available in: Black, White, Red</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+              <a href="#" class="btn btn-primary">Learn more</a>
             </div>
           </div>
         </div>
@@ -213,11 +204,10 @@
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
               <h5 class="card-title">Card #6</h5>
-              <p class="card-text">Available in: Black, White, Red</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+              <a href="#" class="btn btn-primary">Learn more</a>
             </div>
           </div>
         </div>
