--- a/catalog.html
+++ b/catalog.html
@@ -137,7 +137,7 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Fuck You -&nbsp; &nbsp;Sweater</h5>
+              <h5 class="card-title">Logo - Sweater&nbsp; &nbsp;</h5>
               <p class="card-text">&nbsp;Available in: Black, White, Red</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
@@ -152,7 +152,7 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">&nbsp; Fuck You With Logo - Sweater</h5>
+              <h5 class="card-title">&nbsp;Fuck You   - Sweater</h5>
               <p class="card-text"> Available in: Black, White, Red&nbsp;</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
@@ -167,7 +167,7 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">&nbsp;</h5>
+              <h5 class="card-title">&nbsp;Only Yes means Yes - Sweater</h5>
               <p class="card-text">Available in: Black, White, Red</p>
               <p class="card-text">Available in : XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
@@ -182,7 +182,7 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Card #4</h5>
+              <h5 class="card-title">Keep Your Fucking Hands to Yourself - Sweater&nbsp; &nbsp;</h5>
               <p class="card-text"> Available in: Black, White, Red</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
@@ -197,7 +197,7 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Card #5</h5>
+              <h5 class="card-title">My Clothes Don't Define My Consent - Sweater</h5>
               <p class="card-text"> Available in: Black, White, Red</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
@@ -212,7 +212,7 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Card #6</h5>
+              <h5 class="card-title">#respect - Sweater&nbsp;&nbsp;</h5>
               <p class="card-text">Available in: Black, White, Red</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
@@ -221,7 +221,48 @@
             </div>
           </div>
         </div>
-
+		<!-- Card #7 -->
+		  <div class="col-sm-6 col-lg-4 col-xl-3">
+          <div class="card shadow h-100">
+            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <div class="card-body">
+              <h5 class="card-title">#consent - Sweater&nbsp; &nbsp;</h5>
+              <p class="card-text"> Available in: Black, White, Red</p>
+              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+            </div>
+            <div class="card-footer p-2 text-end">
+              <a href="#" class="btn btn-primary">View&nbsp;</a>
+            </div>
+          </div>
+        </div>
+		<!-- Card #8 -->
+		  <div class="col-sm-6 col-lg-4 col-xl-3">
+          <div class="card shadow h-100">
+            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <div class="card-body">
+              <h5 class="card-title">No is No - Sweater&nbsp; &nbsp;</h5>
+              <p class="card-text"> Available in: Black, White, Red</p>
+              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+            </div>
+            <div class="card-footer p-2 text-end">
+              <a href="#" class="btn btn-primary">View&nbsp;</a>
+            </div>
+          </div>
+        </div>
+		<!-- Card #9 --> 
+		  <div class="col-sm-6 col-lg-4 col-xl-3">
+          <div class="card shadow h-100">
+            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <div class="card-body">
+              <h5 class="card-title">My Body, My Rules - Sweater&nbsp; &nbsp;</h5>
+              <p class="card-text"> Available in: Black, White, Red</p>
+              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+            </div>
+            <div class="card-footer p-2 text-end">
+              <a href="#" class="btn btn-primary">View&nbsp;</a>
+            </div>
+          </div>
+        </div>
         <!-- That was the last card -->
 
       </div>
