--- a/website.html
+++ b/website.html
@@ -71,6 +71,17 @@
   <!-- The header content -->
 
     <!-- End of hero section -->
+	  <html>
+	  <head>
+		  <meta charset="utf8">
+		  <title>SiteVirtYou</title>
+		  <link rel="stylesheet" href="style.css">
+		  </head>
+		  <body>
+		  <div class="wrapper">
+			  <video src="videos/frontpagevideo.mp4" autoplay muted loop></video>
+			  
+			  </div></body></html>
 
     <!-- Start of carrousel, adapted from https://getbootstrap.com/docs/5.1/components/carousel/ -->
     <section class="container-fluid p-0">
@@ -120,7 +131,26 @@
       </div>
     </section>
     <!-- End of carrousel -->
-
+	  
+	  The VirtYou Movement
+	  <div class="row"></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite1" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite2.jpg" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite12.jpg" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite4.jpg" alt="" class=""></div>
+	  
+	  
+	  <div class="row"></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite5.jpg" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite6.jpg" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite7.jpg" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite8.jpg" alt="" class=""></div>
+	  
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite9.jpg" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite10.jpg" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite3.jpg" alt="" class=""></div>
+	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite11.jpg" alt="" class=""></div>
+	  
     <!-- A grid with cards
       Learn about grids at: https://getbootstrap.com/docs/5.1/layout/grid/
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
