--- a/website.html
+++ b/website.html
@@ -16,6 +16,7 @@
     <title>Bootstrap Base Template</title>
   </head>
   <body>
+    <header id="header">Content for  id "header" Goes Here</header>
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -78,7 +79,7 @@
 		  <link rel="stylesheet" href="style.css">
 		  </head>
 		  <body>
-		  <div class="wrapper">
+  <div class="wrapper">
 			  <video src="videos/frontpagevideo.mp4" autoplay muted loop></video>
 			  
 			  </div></body></html>
@@ -131,123 +132,39 @@
       </div>
     </section>
     <!-- End of carrousel -->
+	  	&nbsp;
 	  
-	  The VirtYou Movement
+		<h1 style="color: red; text-align: center; font-size: 200px; margin-top: ;">The VirtYou Movement</h1>
 	  <div class="row"></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite1" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite2.jpg" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite12.jpg" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite4.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite1.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite2.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite12.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite4.jpg" alt="" class=""></div>
 	  
 	  
 	  <div class="row"></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite5.jpg" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite6.jpg" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite7.jpg" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite8.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite5.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite6.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite7.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite8.jpg" alt="" class=""></div>
 	  
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite9.jpg" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite10.jpg" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite3.jpg" alt="" class=""></div>
-	  <div class="col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite11.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite9.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite10.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite3.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite11.jpg" alt="" class=""></div>
 	  
     <!-- A grid with cards
       Learn about grids at: https://getbootstrap.com/docs/5.1/layout/grid/
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
     <main class="container py-4">
-      <div class="row g-3 justify-content-evenly">
+		</div></main> class="row g-3 justify-content-evenly"> 
 
-        <!-- Card #1 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #1</h5>
-              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #2 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #2</h5>
-              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #3 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #3</h5>
-              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #4 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #4</h5>
-              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #5 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #5</h5>
-              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #6 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #6</h5>
-              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- That was the last card -->
-
-      </div>
-    </main>
-    <!-- End of the grid with cards -->
-
+       <p>How to get in contact with the service of VirtYou:
+		  Phone number: +31 6 48876807
+		  Mail: </p>
+		  
+	
     <!-- A footer with socials -->
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
