--- a/website.html
+++ b/website.html
@@ -16,7 +16,6 @@
     <title>Bootstrap Base Template</title>
   </head>
   <body>
-    <header id="header">Content for  id "header" Goes Here</header>
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -79,8 +78,9 @@
 		  <link rel="stylesheet" href="style.css">
 		  </head>
 		  <body>
-  <div class="wrapper">
-			  <video src="videos/frontpagevideo.mp4" autoplay muted loop></video>
+  <div class="wrapper header-content">
+    <h2 class="header-content display-1 text-center">VirtYou</h2>
+    <video src="videos/frontpagevideo.mp4" autoplay muted loop></video>
 			  
 			  </div></body></html>
 
@@ -134,7 +134,7 @@
     <!-- End of carrousel -->
 	  	&nbsp;
 	  
-		<h1 style="color: red; text-align: center; font-size: 200px; margin-top: ;">The VirtYou Movement</h1>
+		<h2 class="header-content display-1 text-center">The VirtYou Movement</h2>
 	  <div class="row"></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite1.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite2.jpg" alt="" class=""></div>
@@ -152,20 +152,9 @@
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite10.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite3.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite11.jpg" alt="" class=""></div>
-	  
-    <!-- A grid with cards
-      Learn about grids at: https://getbootstrap.com/docs/5.1/layout/grid/
-      Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
-    -->
-    <main class="container py-4">
-		</div></main> class="row g-3 justify-content-evenly"> 
-
-       <p>How to get in contact with the service of VirtYou:
-		  Phone number: +31 6 48876807
-		  Mail: </p>
-		  
 	
     <!-- A footer with socials -->
+	  
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
@@ -174,17 +163,17 @@
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="Virtyou@outlook.com" target="_blank">
-              <img class="m-2" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="m-2" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
             <a href="https://www.instagram.com/virtyou_/">
-              <img class="m-2" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
+              <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
           </li>
         </ul>
