--- a/website.html
+++ b/website.html
@@ -71,8 +71,8 @@
   <!-- The header content -->
 
     <!-- End of hero section -->
-	  <div> class="container"
-	  <html>
+ <div class="container"></div>
+  <html>
 	  <head>
 		  <meta charset="utf8">
 		  <title>SiteVirtYou</title>
@@ -132,7 +132,7 @@
         </button>
       </div>
     </section>
-	</div> class="container"
+	  <div class="container"></div>
     <!-- End of carrousel -->
 	  	&nbsp;
 	  
@@ -141,22 +141,20 @@
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite1.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite2.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite12.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite4.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite5.jpg" alt="" class=""></div>
 	  
 	  
 	  <div class="row"></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite5.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite6.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite7.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite8.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite11.jpg" alt="" class=""></div>
 	  
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite9.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite10.jpg" alt="" class=""></div>
 	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite3.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite11.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite8.jpg" alt="" class=""></div>
 	
-    <!-- A footer with socials -->
-	  
+    <!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
@@ -174,6 +172,7 @@
             </a>
           </li>
           <li>
+			  
             <a href="https://www.instagram.com/virtyou_/">
               <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
