--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body class="h-100 d-flex flex-column justify-content-center align-items-center">
     <img class="mb-4" src="images/Virtyou-logo.svg" width="175">
-    <h1>VIRTYOU</h1>
-    <h5 class="fst-italic">Coming soon…</h5>
+    <h2 style="align-content: center">VIRTYOU</h2>
+<h5 class="fst-italic">Coming soon…</h5>
 
   </body>
 </html>
