--- a/website.html
+++ b/website.html
@@ -95,7 +95,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/slide-1.jpg" class="d-block mx-auto w-100" alt="...">
+            <img src="images/SWEATER 1.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <h3 class="d-none d-md-block">The Horizon Building</h3>
               <p>
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/slide-2.jpg" class="d-block mx-auto w-100" alt="...">
+            <img src="images/SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <h3 class="d-none d-md-block">The Ocean Building</h3>
               <p>
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/slide-3.jpg" class="d-block mx-auto w-100" alt="...">
+            <img src="images/SWEATER 3.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <h3 class="d-none d-md-block">The Frontier Building</h3>
               <p>
