--- a/account.html
+++ b/account.html
@@ -218,7 +218,7 @@
     </main>
     <!-- End of the grid with cards -->
 
-    <!-- A footer with socials -->
+     <!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
@@ -227,17 +227,18 @@
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="Virtyou@outlook.com" target="_blank">
-              <img class="m-2" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="m-2" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
+			  
             <a href="https://www.instagram.com/virtyou_/">
-              <img class="m-2" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
+              <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
           </li>
         </ul>
