--- a/catalog.html
+++ b/catalog.html
@@ -229,17 +229,17 @@
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="Virtyou@outlook.com" target="_blank">
-              <img class="m-2" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="m-2" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
             <a href="https://www.instagram.com/virtyou_/">
-              <img class="m-2" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
+              <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
           </li>
         </ul>
