--- a/website.html
+++ b/website.html
@@ -97,27 +97,24 @@
           <div class="carousel-item active">
             <img src="images/SWEATER 1.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
-              <h3 class="d-none d-md-block">The Horizon Building</h3>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Learn more<span class="d-inline d-md-none"> about Horizon</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Watch now<span class="d-inline d-md-none"> about Horizon</span></a>
               </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
-              <h3 class="d-none d-md-block">The Ocean Building</h3>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Learn more<span class="d-inline d-md-none"> about Ocean</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Watch now<span class="d-inline d-md-none"> about Ocean</span></a>
               </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/SWEATER 3.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
-              <h3 class="d-none d-md-block">The Frontier Building</h3>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Learn more<span class="d-inline d-md-none"> about Frontier</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Watch now<span class="d-inline d-md-none"> about Frontier</span></a>
               </p>
             </div>
           </div>
