--- a/catalog.html
+++ b/catalog.html
@@ -86,10 +86,10 @@
         <!-- Card #1 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <img class="img-fluid" src="images/SWEATER 2.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Logo - Sweater&nbsp; &nbsp;</h5>
-              <p class="card-text">&nbsp;Available in: Black, White, Red</p>
+              <h5 class="card-title">Only Logo - Sweater&nbsp; &nbsp;</h5>
+              <p class="card-text">Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
@@ -101,10 +101,10 @@
         <!-- Card #2 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <img class="img-fluid" src="images/SWEATER 1.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">&nbsp;Fuck You   - Sweater</h5>
-              <p class="card-text"> Available in: Black, White, Red&nbsp;</p>
+              <h5 class="card-title">Fuck Off + Logo - Sweater</h5>
+              <p class="card-text"> Available in:  White &nbsp;</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
@@ -116,10 +116,10 @@
         <!-- Card #3 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <img class="img-fluid" src="images/SWEATER 3.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">&nbsp;Only Yes means Yes - Sweater</h5>
-              <p class="card-text">Available in: Black, White, Red</p>
+              <h5 class="card-title">My Body My Rules - Sweater</h5>
+              <p class="card-text">Available in:  White</p>
               <p class="card-text">Available in : XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
@@ -131,10 +131,10 @@
         <!-- Card #4 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <img class="img-fluid" src="images/SWEATER 4.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Keep Your Fucking Hands to Yourself - Sweater&nbsp; &nbsp;</h5>
-              <p class="card-text"> Available in: Black, White, Red</p>
+              <h5 class="card-title">Ask Before You Do! - Sweater&nbsp; &nbsp;</h5>
+              <p class="card-text"> Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
@@ -146,10 +146,10 @@
         <!-- Card #5 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <img class="img-fluid" src="images/SWEATER 5.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">My Clothes Don't Define My Consent - Sweater</h5>
-              <p class="card-text"> Available in: Black, White, Red</p>
+              <h5 class="card-title">Fuck Off! - Sweater</h5>
+              <p class="card-text"> Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
@@ -161,10 +161,10 @@
         <!-- Card #6 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <img class="img-fluid" src="images/SWEATER 6.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">#respect - Sweater&nbsp;&nbsp;</h5>
-              <p class="card-text">Available in: Black, White, Red</p>
+              <h5 class="card-title">No Is No - Sweater&nbsp;&nbsp;</h5>
+              <p class="card-text">Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
@@ -175,38 +175,10 @@
 		<!-- Card #7 -->
 		  <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <img class="img-fluid" src="images/SWEATER 7.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">#consent - Sweater&nbsp; &nbsp;</h5>
-              <p class="card-text"> Available in: Black, White, Red</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
-            </div>
-          </div>
-        </div>
-		<!-- Card #8 -->
-		  <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">No is No - Sweater&nbsp; &nbsp;</h5>
-              <p class="card-text"> Available in: Black, White, Red</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
-            </div>
-          </div>
-        </div>
-		<!-- Card #9 --> 
-		  <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">My Body, My Rules - Sweater&nbsp; &nbsp;</h5>
-              <p class="card-text"> Available in: Black, White, Red</p>
+              <h5 class="card-title">My Body My Rules + Logo - Sweater&nbsp; &nbsp;</h5>
+              <p class="card-text"> Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
