--- a/catalog.html
+++ b/catalog.html
@@ -200,7 +200,7 @@
         </p>
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
-            <a href="Virtyou@outlook.com" target="_blank">
+            <a href="mailto:Virtyou@outlook.com" target="_blank">
               <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
             </a>
           </li>
