About Virtyou, Alisha

--- a/website.html
+++ b/website.html
@@ -81,7 +81,8 @@
 		  <body>
   <div class="wrapper header-content">
     <h2 class="header-content display-1 text-center">VirtYou</h2>
-    <video src="videos/frontpagevideo.mp4" autoplay muted loop></video>
+	<h2 class="under-title text-center display-8">Respect - Safety - Self-Determination - Responsiveness</h2>
+	<video src="videos/frontpagevideo.mp4" autoplay muted loop></video>
 			  
 			  </div></body></html>
 
