About Virtyou, About the Brand

--- a/about virtyou.html
+++ b/about virtyou.html
@@ -16,10 +16,9 @@
     <title>Bootstrap Base Template</title>
   </head>
   <body>
-
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="images/Virtyou-logo.svg" width="75" alt="Breda University of Applied Sciences">
         </a>
@@ -81,7 +80,7 @@
 		  <body>
   <div class="wrapper header-content">
     <h2 class="header-content display-1 text-center">About VirtYou</h2>
-    <h2 class="under-title text-center display-8">About The Team</h2>			  
+    <h2 class="under-title text-center display-5">About The Team</h2>			  
 </div></body></html>
 
     
@@ -98,7 +97,7 @@
             <img class="img-fluid" src="images/Alisha.jpg" alt="Placeholder Image">
             <div class="card-body">
               <h5 class="card-title">Alisha Wenas</h5>
-              <p class="card-text"> Alisha Wenas, 21-years-old, was born in Nijmegen into a&nbsp;Dutch-Indonesian family. Together with her mother she moved to Breda when she was 6-years-old. In her teenage years, she struggled a lot with being assertive, setting boundaries, and choosing herself every now and then. After going through some bad experiences herself, she decided to work on these aspects. She realized that everyone has the right to be assertive. Now she is a confident woman who knows what she wants and no longer avoids confrontation. She wishes that every woman and minority felt the same way.</p>
+              <p class="card-text"> Alisha Wenas, 21-years-old, was born in Nijmegen into a Dutch-Indonesian family. Together with her mother she moved to Breda when she was 6-years-old. In her teenage years, she struggled a lot with being assertive, setting boundaries, and choosing herself every now and then. After going through some bad experiences herself, she decided to work on these aspects. She realized that everyone has the right to be assertive. Now she is a confident woman who knows what she wants and no longer avoids confrontation. She wishes that every woman and minority will feel one day the same way. "Everyone should be able to voice their boundaries just as everyone should accept these boundaries." </p>
             </div>
             <div class="card-footer p-2 text-end">
               <a href="#" class="btn btn-primary">Learn more</a>
@@ -111,7 +110,7 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Card #2</h5>
+              <h5 class="card-title">Kim van den Ham</h5>
               <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
             </div>
             <div class="card-footer p-2 text-end">
@@ -125,7 +124,7 @@
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title">Card #3</h5>
+              <h5 class="card-title">Michelle Schepers</h5>
               <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
             </div>
             <div class="card-footer p-2 text-end">
@@ -141,6 +140,11 @@
     </main>
     <!-- End of the grid with cards -->
 
+	  <!-- About The Brand -->
+	  <h2 class="under-title text-center display-5">About The Brand</h2>
+	 
+	  <p>VirtYou was founded in February 2022. The brand value is based on a lyric from Yellow by Coldplay, namely "I drew a line." We, Kim van den Ham, Michelle Schepers, and Alisha Wenas believe that, "In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that people feel safe, protected, and able to voice their feelings and discomforts, because only then we can have a fair and civilized society."</p>
+	  
     <!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
