--- a/website.html
+++ b/website.html
@@ -96,7 +96,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/SWEATER 1.png" class="d-block mx-auto w-100" alt="...">
+            <img src="images/VirtYou Sweaters_SWEATER 1.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
                 <a href="#" class="btn btn-outline-light my-md-2">Watch now<span class="d-inline d-md-none"> about Horizon</span></a>
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
+            <img src="images/VirtYou Sweaters_SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
                 <a href="#" class="btn btn-outline-light my-md-2">Watch now<span class="d-inline d-md-none"> about Ocean</span></a>
@@ -112,7 +112,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/SWEATER 3.png" class="d-block mx-auto w-100" alt="...">
+            <img src="images/VirtYou Sweaters_SWEATER 3.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
                 <a href="#" class="btn btn-outline-light my-md-2">Watch now<span class="d-inline d-md-none"> about Frontier</span></a>
