--- a/about virtyou.html
+++ b/about virtyou.html
@@ -108,10 +108,10 @@
         <!-- Card #2 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
+            <img class="img-fluid" src="images/kim.jpg" alt="Placeholder Image">
             <div class="card-body">
               <h5 class="card-title">Kim van den Ham</h5>
-              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
+              <p class="card-text">Kim van den Ham, 23- years-old, was born in Baarlo into a Dutch Catholic family. She grew up with her 2 younger brothers, Jules and Stef. Due to being raised among mostly boys within her family, Kim learned to stand her ground and knew how and when to speak up for herself. When Kim became a teenager, she noticed that other girls struggled with not knowing how to set their boundaries or how to stand up for themselves. She tried to help them by telling them her little tricks but she always wanted to do more for other woman and minorities who struggle to stand their ground. Now she is an adult who aspires to create awareness for this matter, this by drawing inspiration from her own youth. “I want everyone to be able and comfortable to voice their discomforts on the moments it matters the most”</p>
             </div>
             <div class="card-footer p-2 text-end">
               <a href="#" class="btn btn-primary">Learn more</a>
