--- a/about virtyou.html
+++ b/about virtyou.html
@@ -34,13 +34,13 @@
               <a class="nav-link" href="catalog.html">Catalog&nbsp;</a>
             </li>
 			  <li class="nav-item">
-              <a class="nav-link" href="#">About VirtYou&nbsp;</a>
+              <a class="nav-link" href="about virtyou.html">About VirtYou&nbsp;</a>
             </li>
 			  <li class="nav-item">
               <a class="nav-link" href="#">About Empowerment&nbsp;</a>
             </li>
 			  <li class="nav-item">
-              <a class="nav-link" href="#">Account&nbsp;</a>
+              <a class="nav-link" href="account.html">Account&nbsp;</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
