--- a/corporate.html
+++ b/corporate.html
@@ -19,9 +19,9 @@
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
     <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/buas-square.svg" width="40" alt="Breda University of Applied Sciences">
+  <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="images/Virtyou-logo.svg" width="75" alt="Breda University of Applied Sciences">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,15 +29,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="catalog.html">Catalog&nbsp;</a>
+            </li>
+			  <li class="nav-item">
+              <a class="nav-link" href="about virtyou.html">About VirtYou&nbsp;</a>
+            </li>
+			  <li class="nav-item">
+              <a class="nav-link" href="#">About Empowerment&nbsp;</a>
+            </li>
+			  <li class="nav-item">
+              <a class="nav-link" href="account.html">Account&nbsp;</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
+              Account&nbsp; </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -46,7 +54,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="corporate.html">Corporate</a>
+              <a class="nav-link" href="corporate.html">Corporate</a>
             </li>
           </ul>
         </div>
