--- a/website.html
+++ b/website.html
@@ -107,7 +107,7 @@
             <img src="images/VirtYou Sweaters_SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Watch now<span class="d-inline d-md-none"> about Ocean</span></a>
+                <a href="catalog.html" class="btn btn-outline-light my-md-2">Watch now<span class="d-inline d-md-none"> about Ocean</span></a>
               </p>
             </div>
           </div>
