--- a/website.html
+++ b/website.html
@@ -80,7 +80,7 @@
 		  </head>
 		  <body>
   <div class="wrapper header-content">
-    <h2 class="header-content display-1 text-center">VirtYou</h2>
+    <h2 class="header-content text-center display-1">VirtYou</h2>
 	<h2 class="under-title text-center display-6">Respect - Safety - Self-Determination - Responsiveness</h2>
 	<video src="videos/frontpagevideo.mp4" autoplay muted loop></video>
 			  
@@ -160,7 +160,7 @@
         </p>
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
-            <a href="Virtyou@outlook.com" target="_blank">
+            <a href="mailto:Virtyou@outlook.com" target="_blank">
               <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
             </a>
           </li>
