--- a/about virtyou.html
+++ b/about virtyou.html
@@ -61,11 +61,6 @@
     </nav>
     <!-- End of navigation bar -->
 
-  <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
-  <div class="overlay"></div>
-
-  <!-- The HTML5 video element that will create the background video on the header -->
- 
 
   <!-- The header content -->
 
@@ -80,7 +75,7 @@
 		  <body>
   <div class="wrapper header-content">
     <h2 class="header-content display-1 text-center">About VirtYou</h2>
-    <h2 class="under-title text-center display-5">About The Team</h2>			  
+    <h2 class="under-title_aboutvirtyou text-center display-5">About The Team</h2>			  
 </div></body></html>
 
     
@@ -141,7 +136,7 @@
     <!-- End of the grid with cards -->
 
 	  <!-- About The Brand -->
-	  <h2 class="under-title text-center display-5">About The Brand</h2>
+	  <h2 class="under-title_aboutvirtyou text-center display-5">About The Brand</h2>
 	
 	  
 	  <p class="brand-text text-center card-body shadow-lg"> VirtYou was founded in February 2022. The brand value is based on a lyric from Yellow by Coldplay, namely "I drew a line." We, Kim van den Ham, Michelle Schepers, and Alisha Wenas believe that, "In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that people feel safe, protected, and able to voice their feelings and discomforts, because only then we can have a fair and civilized society."</p>
