Images, extra pages

--- a/website.html
+++ b/website.html
@@ -99,7 +99,7 @@
             <img src="images/VirtYou Sweaters_SWEATER 3.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">My Body My Rules - Sweater<span class="d-inline d-md-none"> about Horizon</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">My Body My Rules - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
@@ -107,7 +107,7 @@
             <img src="images/VirtYou Sweaters_SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
-                <a href="catalog.html" class="btn btn-outline-light my-md-2">Fuck Off + Logo - Sweater<span class="d-inline d-md-none"> about Sweater</span></a>
+                <a href="catalog.html" class="btn btn-outline-light my-md-2">Fuck Off + Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
@@ -115,7 +115,7 @@
             <img src="images/VirtYou Sweaters_SWEATER 1.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Only Logo - Sweater<span class="d-inline d-md-none"> about Frontier</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Only Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
