--- a/about virtyou.html
+++ b/about virtyou.html
@@ -16,7 +16,8 @@
     <title>Bootstrap Base Template</title>
   </head>
   <body>
-    <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
+ 
+	  <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -73,7 +74,8 @@
 		  <link rel="stylesheet" href="style.css">
 		  </head>
 		  <body>
-  <div class="wrapper header-content">
+ 
+	<div class="wrapper header-content">
     <h2 class="header-content display-1 text-center">About VirtYou</h2>
     <h2 class="under-title_aboutvirtyou text-center display-5">About The Team</h2>			  
 </div></body></html>
@@ -134,14 +136,32 @@
       </div>
     </main>
     <!-- End of the grid with cards -->
-
+<br>
 	  <!-- About The Brand -->
 	  <h2 class="under-title_aboutvirtyou text-center display-5">About The Brand</h2>
-	
+	<br>
 	  
-	  <p class="brand-text text-center card-body shadow-lg"> VirtYou was founded in February 2022. The brand value is based on a lyric from Yellow by Coldplay, namely "I drew a line." We, Kim van den Ham, Michelle Schepers, and Alisha Wenas believe that, "In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that people feel safe, protected, and able to voice their feelings and discomforts, because only then we can have a fair and civilized society."</p>
-
-    <!-- A footer with socials -->  
+	  <p class="brand-text  card-body shadow-lg"> VirtYou was founded in February 2022. The brand value is based on a lyric from Yellow by Coldplay, namely "I drew a line." We, Kim van den Ham, Michelle Schepers, and Alisha Wenas believe that, "In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that all people feel safe, protected, and able to voice their feelings and discomforts, because only then we can have a fair and civilized society." Nowadays, women and minorities are still treated different. They still encounter problems when it comes to boundary-crossing behavior. Many times the blame is placed on the people who do not dare to stand up for themselves. However, this world does not make these people feel safe and respect to actually speak up. We want to make it easier to stand up for yourself through our brand and products. <br>
+	<br>
+	Therefore, our brand values are:<br>
+	Self-Determination: <br>
+	Safety:<br>
+	Respect:<br>
+	Respnsiveness:	  
+	  </p>
+<br><br>
+	  
+	  <!-- About Social Media -->
+	  <h2 class="under-title_aboutvirtyou text-center display-5">Social Media</h2>
+	  <br>
+	   <p class="instagram-text  card-body text-center shadow-lg"> Instagram
+	<a href="https://www.instagram.com/virtyou_/">
+              <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26"></a>
+	<img src="images/picturewebsite1.jpg" alt="" class="">
+	  </p>
+   
+	
+	<!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
