--- a/about virtyou.html
+++ b/about virtyou.html
@@ -157,7 +157,7 @@
 	   <p class="instagram-text  card-body text-center shadow-lg"> Instagram
 	<a href="https://www.instagram.com/virtyou_/">
               <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26"></a>
-	<img src="images/picturewebsite1.jpg" alt="" class="">
+	<img src="images/coming soon.png" alt="" class="">
 	  </p>
    
 	
