--- a/website.html
+++ b/website.html
@@ -16,12 +16,13 @@
     <title>Bootstrap Base Template</title>
   </head>
   <body>
+  <br data_temp_dwid="0">
   
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="images/Virtyou-logo.svg" width="75" alt="Breda University of Applied Sciences">
+        <img src="images/Virtyou-logo.svg" width="75" alt="Breda University of Applied Sciences">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -59,7 +60,7 @@
           </ul>
         </div>
       </div>
-    </nav>
+  </nav>
     <!-- End of navigation bar -->
  
 
@@ -78,13 +79,17 @@
 	
 	
 	<!-- The HTML5 video element that will create the background video on the header -->
-	<div class="overlay"></div>
-	<video src="videos/frontpagevideo.mp4" autoplay muted loop></video> 
-	</body></html>
+  <div class="container-fluid overlay"></div>
+	<video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+  <source src="videos/frontpagevideo.mp4"></video> 
+</body></html>
 
-	 <div class="wrapper header-content">
-    <h2 class="text-center display-1 main-header-content">VirtYou</h2>
+	  <div class="container-fluid">
+    <h2 class="main-header-content container-fluid text-center display-1">VirtYou</h2>
 	<h2 class="under-title text-center display-6">Self-Determination &nbsp;| &nbsp;Safety &nbsp;&nbsp;| &nbsp;&nbsp;Responsiveness &nbsp;&nbsp;| &nbsp;&nbsp;Respect</h2></div>
+	  
+	  
+	 
 	  
     <!-- Start of carrousel, adapted from https://getbootstrap.com/docs/5.1/components/carousel/ -->
     <section class="container-fluid p-0">
