--- a/Test.html
+++ b/Test.html
@@ -78,9 +78,9 @@
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1 class="display-3">VirtYou</h1>
-        <p class="lead mb-0">Self-Determination | Safety | Responsiveness | Respect</p>
-      </div>
+		<h2 class="main-header-content display-1 text-center">VirtYou</h2>
+        <p class="lead mb-0 under-title">Self-Determination | Safety | Responsiveness | Respect</p>
+		  </div>
     </div>
   </div>
 </header>
@@ -100,29 +100,26 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/slide-1.jpg" class="d-block mx-auto w-100" alt="...">
+            <img src="images/VirtYou Sweaters_SWEATER 3.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
-              <h3 class="d-none d-md-block">The Horizon Building</h3>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Learn more<span class="d-inline d-md-none"> about Horizon</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">My Body My Rules - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/slide-2.jpg" class="d-block mx-auto w-100" alt="...">
+            <img src="images/VirtYou Sweaters_SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
-              <h3 class="d-none d-md-block">The Ocean Building</h3>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Learn more<span class="d-inline d-md-none"> about Ocean</span></a>
+                <a href="catalog.html" class="btn btn-outline-light my-md-2">Fuck Off + Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/slide-3.jpg" class="d-block mx-auto w-100" alt="...">
+            <img src="images/VirtYou Sweaters_SWEATER 1.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
-              <h3 class="d-none d-md-block">The Frontier Building</h3>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Learn more<span class="d-inline d-md-none"> about Frontier</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Only Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
@@ -137,106 +134,29 @@
         </button>
       </div>
     </section>
+	  <div class="container"></div>
     <!-- End of carrousel -->
-
-    <!-- A grid with cards
-      Learn about grids at: https://getbootstrap.com/docs/5.1/layout/grid/
-      Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
-    -->
-    <main class="container py-4">
-      <div class="row g-3 justify-content-evenly">
-
-        <!-- Card #1 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #1</h5>
-              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #2 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #2</h5>
-              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #3 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #3</h5>
-              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #4 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #4</h5>
-              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #5 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #5</h5>
-              <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card #6 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/placeholder.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Card #6</h5>
-              <p class="card-text">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum.</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">Learn more</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- That was the last card -->
-
-      </div>
-    </main>
-    <!-- End of the grid with cards -->
-
-     <!-- A footer with socials -->  
+	  	&nbsp;
+	  
+		<h2 class="header-content display-1 text-center">The VirtYou Movement</h2>
+	  <div class="row"></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite1.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite2.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite12.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite5.jpg" alt="" class=""></div>
+	  
+	  
+	  <div class="row"></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite6.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite7.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite11.jpg" alt="" class=""></div>
+	  
+	 
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite10.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite3.jpg" alt="" class=""></div>
+	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite8.jpg" alt="" class=""></div>
+	
+    <!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
@@ -244,7 +164,7 @@
         </p>
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
-            <a href="Virtyou@outlook.com" target="_blank">
+            <a href="mailto:Virtyou@outlook.com" target="_blank">
               <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
             </a>
           </li>
